--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 body {
     text-align: center;
+	font-family: Arial, sans-serif;
+
+}
+#choose_sprite {
+	font-size: 80%;
+}
+#directions {
+	max-width: 500px;
+	margin: 20px auto;
 }
